--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,13 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
   text-align: center;
 }
 
 .logo {
   height: 6em;
   padding: 1.5em;
-  will-change: filter;
+  will-change: filter; 
   transition: filter 300ms;
 }
 .logo:hover {
@@ -39,4 +38,8 @@
 
 .read-the-docs {
   color: #888;
+}
+
+button {
+  outline: none !important;
 }
